<resources>
    <string name="app_name">RunOrRun</string>
    <string name="google_maps_api_key"></string>


    <!-- BUTTOM NAV -->
    <string name="menu_run">Your runs</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>

    <!-- TRACKING FRAGMENT -->
    <string name="tv_timer">00:00:00:00</string>
    <string name="tv_lets_go">Let\'s go</string>
    <string name="btn_start_run">Start run</string>
    <string name="btn_pause_run">Pause run</string>
    <string name="btn_finish_run">Finish run</string>

    <!-- SET UP FRAGMENT -->
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="hint_enter_your_weight">Enter your weight</string>
    <string name="err_empty_field">Oops, this field couldn\'t be empty</string>

    <!-- SETTINGS FRAGMENT -->
    <string name="tv_user_details">User details</string>
    <string name="tv_user_details_edit">User details edit</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>

    <!-- SORT SPINNER -->
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
</resources>